syntax = "proto3";

package auth;

service AuthService {
  rpc LocalLogin (LocalLoginData) returns (JWTToken){}
}

message LocalLoginData {
  string id = 1;
  string ps = 2;
}

message JWTToken {
  string accessToken = 1;
  string refreshToken = 2;
}